--- a/02_レシピ/02_Trello（保存機能あり）/index.html
+++ b/02_レシピ/02_Trello（保存機能あり）/index.html
@@ -13,9 +13,10 @@
     </header>
     <div class="main-container">
       <div class="list-container">
-        <div class="list-header">ギークサロン</div>
+        <div class="list-header">狩野</div>
         <div class="cards-container" id="cards-container">
           <!-- ここにカードを追加する -->
+          ここにカードを追加する
         </div>
         <div class="list-footer">
           <div class="input-container">
