--- a/02_レシピ/02_Trello（保存機能なし）/index.html
+++ b/02_レシピ/02_Trello（保存機能なし）/index.html
@@ -13,14 +13,16 @@
     </header>
     <div class="main-container">
       <div class="list-container">
-        <div class="list-header">ギークサロン</div>
+        <div class="list-header">あああ</div>
         <div class="cards-container" id="cards-container">
           <!-- ここにカードを追加する -->
+          ここにカードを追加する
         </div>
         <div class="list-footer">
           <div class="input-container">
             <input type="text" class="input-todo" id="input-todo" />
             <div class="input-button" id="add-button">追加</div>
+            <div class="delete"></div>
           </div>
         </div>
       </div>
