--- a/03_サンプル/02_クイズ（１問）/index.html
+++ b/03_サンプル/02_クイズ（１問）/index.html
@@ -15,6 +15,7 @@
         <button id="choice-1"></button>
         <button id="choice-2"></button>
         <button id="choice-3"></button>
+        <div id="button0"></div>
       </div>
       <div id="feedback"></div>
     </div>
