--- a/04_ゼミ/week0/session/week2/index.html
+++ b/04_ゼミ/week0/session/week2/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-      <input id="memo-input">
-      <button id="add-button">
+    <input id="memo-input" />
+    <button id="add-button">追加</button>
+    <div id="memo-container"></div>
 
-      </button>
-      <div id="memo-container"></div>
-      
     <script src="./main.js"></script>
   </body>
 </html>
